--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">SkySync</string>
+    <string name="default_web_client_id" translatable="false">
+        1047114844694-8svucm3pjf4lcs993hlfk04ji9vfuont.apps.googleusercontent.com
+    </string>
 </resources>
