--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
     <string name="default_web_client_id" translatable="false">
         1047114844694-8svucm3pjf4lcs993hlfk04ji9vfuont.apps.googleusercontent.com
     </string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
